--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "xiaozhi-esp32-server"]
 	path = xiaozhi-esp32-server
 	url = https://github.com/xinnan-tech/xiaozhi-esp32-server.git
+[submodule "xiaozhi-esp32"]
+	path = xiaozhi-esp32
+	url = https://github.com/78/xiaozhi-esp32.git
